objects/ASI_CRM_VN_Contract_Expenditure__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Balance_Amount__c</fullName>
        <formula>(ASI_CRM_VN_Amount__c *  ASI_CRM_VN_Quantity__c) - ASI_CRM_Commit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cal_Balance_Amount__c</fullName>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commit_Amount__c</fullName>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Brand</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select VN Sub-Brand</errorMessage>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN Sub-Brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Contract Expenditures</relationshipLabel>
        <relationshipName>Contract_Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount__c</fullName>
        <formula>ASI_CRM_VN_Amount__c * ASI_CRM_VN_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Achieved_Target_for_2nd_Pmt__c</fullName>
        <label>Achieved Target % for 2nd Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Achieved_Target_for_3rd_Pmt__c</fullName>
        <label>Achieved Target % for 3rd Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Achieved_Target_for_4th_Pmt__c</fullName>
        <label>Achieved Target % for 4th Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_CRM_VN_Contract__c</referenceTo>
        <relationshipLabel>Contract Expenditures</relationshipLabel>
        <relationshipName>Contract_Expenditures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Item__c</fullName>
        <label>Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>PG &amp; Uniform</fullName>
                </value>
                <value>
                    <fullName>Branding (Signage)</fullName>
                </value>
                <value>
                    <fullName>FOC Bottles</fullName>
                </value>
                <value>
                    <fullName>VIP Rooms</fullName>
                </value>
                <value>
                    <fullName>Glassware (Including Ice Buckets)</fullName>
                </value>
                <value>
                    <fullName>Drink Menus</fullName>
                </value>
                <value>
                    <fullName>Podium Stands &amp; Glorifiers</fullName>
                </value>
                <value>
                    <fullName>Display/Listing Fee</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Payment_Times__c</fullName>
        <label>Payment Times</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN CRM SKU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Contract Expenditures</relationshipLabel>
        <relationshipName>Contract_Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Sales_Target__c</fullName>
        <label>Sales Target(Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Service_Pack_Threshold__c</fullName>
        <label>Service Pack Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Service_Pack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Pack</label>
        <referenceTo>ASI_CRM_ServicePack__c</referenceTo>
        <relationshipLabel>Contract Expenditures</relationshipLabel>
        <relationshipName>Contract_Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Total_Amount__c</fullName>
        <formula>ASI_CRM_VN_Unit_Incentive__c * ASI_CRM_VN_Sales_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (VND)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Unit_Incentive__c</fullName>
        <label>Unit Incentive (VND)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contract Expenditure</label>
    <nameField>
        <displayFormat>VNER-{00000}</displayFormat>
        <label>Expenditure Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Expenditures</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Activation_Contract_Expenditure</fullName>
        <active>true</active>
        <label>ASI CRM VN Activation Contract Expenditure</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Activation_Contract_Expenditure_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Activation Contract Expenditure Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Capsule_Agreement_Contract_Expenditure</fullName>
        <active>true</active>
        <label>ASI CRM VN Capsule Agreement Contract Expenditure</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Capsule_Agreement_Contract_Expenditure_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Capsule Agreement Contract Expenditure Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Contract_Expenditure</fullName>
        <active>true</active>
        <label>ASI CRM VN Contract Expenditure</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Contract_Expenditure_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Contract Expenditure Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_VN_Invalid_AchievedTarget</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_VN_Achieved_Target_for_2nd_Pmt__c &gt;  ASI_CRM_VN_Achieved_Target_for_3rd_Pmt__c
||
ASI_CRM_VN_Achieved_Target_for_2nd_Pmt__c &gt;
ASI_CRM_VN_Achieved_Target_for_4th_Pmt__c 
||
ASI_CRM_VN_Achieved_Target_for_3rd_Pmt__c &gt;
ASI_CRM_VN_Achieved_Target_for_4th_Pmt__c</errorConditionFormula>
        <errorMessage>Please input correct achieved target</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_Invalid_PaymentTime</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_CRM_VN_Payment_Times__c, &apos;4&apos;) &amp;&amp;  
(ISBLANK(ASI_CRM_VN_Achieved_Target_for_2nd_Pmt__c) ||
ISBLANK(ASI_CRM_VN_Achieved_Target_for_3rd_Pmt__c) || 
ISBLANK(ASI_CRM_VN_Achieved_Target_for_4th_Pmt__c))
||
ISPICKVAL(ASI_CRM_VN_Payment_Times__c, &apos;3&apos;) &amp;&amp;  
(ISBLANK(ASI_CRM_VN_Achieved_Target_for_2nd_Pmt__c) ||
ISBLANK(ASI_CRM_VN_Achieved_Target_for_3rd_Pmt__c))
||
ISPICKVAL(ASI_CRM_VN_Payment_Times__c, &apos;2&apos;) &amp;&amp;  ISBLANK(ASI_CRM_VN_Achieved_Target_for_2nd_Pmt__c)</errorConditionFormula>
        <errorMessage>Please input correct payment times and achieved target</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_Mandatory_PaymentTime</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(ASI_CRM_VN_Payment_Times__c, &apos;&apos;),
ISPICKVAL(ASI_CRM_VN_Item__c, &apos;Lump Sum&apos;)
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_VN_Payment_Times__c</errorDisplayField>
        <errorMessage>Payment Times is mandatory when Item is &apos;Lump Sum&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_PaymentTime_CannotBeBlank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(ASI_CRM_VN_Payment_Times__c, &apos;&apos;)
,
OR(
NOT(ISBLANK(ASI_CRM_VN_Achieved_Target_for_2nd_Pmt__c)),
NOT(ISBLANK(ASI_CRM_VN_Achieved_Target_for_3rd_Pmt__c)),
NOT(ISBLANK(ASI_CRM_VN_Achieved_Target_for_4th_Pmt__c))
)
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_VN_Payment_Times__c</errorDisplayField>
        <errorMessage>Payment Time cannot be blank when Achieved Target % is inputted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_PaymentTime_ShouldBeBlank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	NOT(ISPICKVAL(ASI_CRM_VN_Item__c, &apos;Lump Sum&apos;)), 
	NOT(ISPICKVAL(ASI_CRM_VN_Item__c, &apos;Promotion&apos;)), 
	NOT(ISPICKVAL(ASI_CRM_VN_Payment_Times__c, &apos;&apos;))
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_VN_Payment_Times__c</errorDisplayField>
        <errorMessage>Payment Time can only be inputted when item is Lump Sum or Promotion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_Qty_Amount_Cannot_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ASI_CRM_VN_Amount__c &lt; 0,
ASI_CRM_VN_Quantity__c &lt; 0
)</errorConditionFormula>
        <errorMessage>Quantity and Amount field only can input positive number.</errorMessage>
    </validationRules>
</CustomObject>